--- a/assets/mains/styles_reset.css
+++ b/assets/mains/styles_reset.css
@@ -41,9 +41,10 @@ body {
     font-size                  : 100%;
     line-height                : 1;
     font-size                  : 14px;
-    -ms-text-size-adjust       : 100%;
-    -moz-text-size-adjust      : 100%;
     -webkit-text-size-adjust   : 100%;
+    -moz-text-size-adjust      : 100%;
+    -ms-text-size-adjust       : 100%;
+    text-size-adjust           : 100%;
 }
 
 
@@ -59,8 +60,8 @@ input::-ms-clear {
 }
 
 button {
-    background-color: transparent;
-    cursor   : pointer;
+    background-color   : transparent;
+    cursor             : pointer;
 }
 
 button::-moz-focus-inner {
