--- a/assets/mains/icofont.css
+++ b/assets/mains/icofont.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family   : 'icofont';
-	src           : url('fonts/icofont.eot?rln90c');
+	src           : url('../../fonts/icofont.eot');
 	src           : url('fonts/icofont.eot?rln90c#iefix') format('embedded-opentype'),
-		url('fonts/icofont.ttf?rln90c') format('truetype'),
-		url('fonts/icofont.woff?rln90c') format('woff'),
-		url('fonts/icofont.svg?rln90c#icofont') format('svg');
+		url('../../fonts/icofont.ttf?rln90c') format('truetype'),
+		url('../../fonts/icofont.woff?rln90c') format('woff'),
+		url('../../fonts/icofont.svg?rln90c#icofont') format('svg');
 	font-weight    : normal;
 	font-style     : normal;
 	font-display   : block;
