--- a/assets/mains/main.css
+++ b/assets/mains/main.css
@@ -164,7 +164,6 @@ a {
 	-webkit-transition      : all .2s ease;
 	-o-transition           : all .2s ease;
 	transition              : all .2s ease;
-	z-index                 : 2;
 }
 
 .button2:hover {
@@ -532,7 +531,7 @@ a {
 	-webkit-align-items       : center;
 	align-items               : center;
 	padding                   : 100px 1.5em 5em 1.5em;
-	min-height                : 100vh;
+	min-height                : 100%;
 	font-size                 : 10px;
 	line-height               : 1.2;
 }
@@ -858,14 +857,14 @@ a {
 	position              : fixed;
 	opacity               : 0.2;
 	background            : url(../courses/backgr.svg);
-	background-position   : left bottom;
 	background-size       : contain;
 	top                   : 0;
-	right                 : -450vh;
+	right                 : -450vw;
 	bottom                : 0;
 	left                  : 0;
 	-webkit-animation     : scroll linear 100s infinite;
 	animation             : scroll linear 100s infinite;
+	background-position   : left bottom;
 	z-index               : -1000;
 }
 
