--- a/assets/mains/main.css
+++ b/assets/mains/main.css
@@ -164,6 +164,10 @@ a {
 	max-width   : 1566px;
 }
 
+section {
+	overflow   : hidden;
+}
+
 
 
 
@@ -1479,6 +1483,32 @@ footer p:nth-child(2) {
 	opacity          : 0;
 	transform        : translate(0, 10%);
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
