--- a/assets/mains/icofont.css
+++ b/assets/mains/icofont.css
@@ -1,7 +1,7 @@
 @font-face {
 	font-family   : 'icofont';
 	src           : url('../../fonts/icofont.eot');
-	src           : url('fonts/icofont.eot?rln90c#iefix') format('embedded-opentype'),
+	src           : url('../../fonts/icofont.eot?rln90c#iefix') format('embedded-opentype'),
 		url('../../fonts/icofont.ttf?rln90c') format('truetype'),
 		url('../../fonts/icofont.woff?rln90c') format('woff'),
 		url('../../fonts/icofont.svg?rln90c#icofont') format('svg');
