--- a/assets/mains/main.css
+++ b/assets/mains/main.css
@@ -57,8 +57,48 @@ img {
 	pointer-events   : none;
 }
 
+/* ! ССЫЛКИ */
+
 a {
 	color   : var(--logo-color);
+}
+
+a.underline {
+	position             : relative;
+	display              : inline-block;
+	padding              : .1rem 1rem .3rem;
+	font-weight          : 500;
+	text-indent          : 0;
+	-webkit-transition   : all .1s ease;
+	-o-transition        : all .1s ease;
+	transition           : all .1s ease;
+}
+
+a.underline:hover {
+	color   : white;
+}
+
+a.underline::after {
+	content                 : '';
+	position                : absolute;
+	background-color        : var(--logo-color);
+	-webkit-border-radius   : .9rem;
+	border-radius           : .9rem;
+	top                     : 90%;
+	right                   : 1rem;
+	left                    : 1rem;
+	height                  : 2px;
+	-webkit-transition      : all .1s ease;
+	-o-transition           : all .1s ease;
+	transition              : all .1s ease;
+}
+
+a.underline:hover::after {
+	top       : 0;
+	left      : 0;
+	right     : 0;
+	height    : 100%;
+	z-index   : -1;
 }
 
 /* ! BUTTON 1 */
@@ -78,7 +118,7 @@ a {
 	align-items             : center;
 	overflow                : hidden;
 	background-color        : var(--button_bg_color);
-	padding                 : .8rem 2.5rem;
+	padding                 : .27em 1.38em;
 	-webkit-border-radius   : var(--button_rad);
 	border-radius           : var(--button_rad);
 	min-width               : -webkit-max-content;
@@ -154,6 +194,7 @@ a {
 	align-items             : center;
 	background-color        : var(--logo-color);
 	padding                 : .8rem 2.5rem;
+	font-size               : inherit;
 	-webkit-border-radius   : 2rem;
 	border-radius           : 2rem;
 	min-width               : -webkit-max-content;
@@ -282,7 +323,7 @@ section {
 
 
 
-/* MOBILE NAV */
+/* ! MOBILE NAV */
 
 .mobile_modal_nav {
 	--section-size                      : .7vmin;
@@ -328,11 +369,9 @@ section {
 	-ms-flex-negative     : 0;
 	-webkit-flex-shrink   : 0;
 	flex-shrink           : 0;
-	margin                : 0 0 -webkit-calc(var(--section-size) * 2) 0;
-	margin                : 0 0 calc(var(--section-size) * 2) 0;
 	margin-top            : auto;
 	width                 : 9em;
-	height: auto;
+	height                : auto;
 }
 
 .mobile_modal_nav__inner>a {
@@ -355,13 +394,13 @@ section {
 }
 
 .mobile_modal_nav__close>svg {
-	-ms-flex-negative     : 0;
-	-webkit-flex-shrink   : 0;
-	flex-shrink           : 0;
-	width                 : 1em;
-	height                : 1em;
-	fill                  : red;
-	margin                : auto;
+	-ms-flex-negative           : 0;
+	-webkit-flex-shrink         : 0;
+	flex-shrink                 : 0;
+	width                       : 1em;
+	height                      : 1em;
+	fill                        : white;
+	margin                      : auto;
 }
 
 
@@ -1695,6 +1734,24 @@ section {
 	font-size             : 2.4rem;
 }
 
+.contacts__subscribe_text {
+	text-align   : center;
+	width        : 100%;
+}
+
+.contacts__subscribe_button span {
+	font-size     : 2.4rem;
+	width         : 100%;
+	padding       : 1.4rem;
+	text-align    : center;
+	font-weight   : 500;
+}
+
+.contacts__subscribe_button:hover {
+	-webkit-transform   : scale(1.03);
+	-ms-transform       : scale(1.03);
+	transform           : scale(1.03);
+}
 
 
 
@@ -2105,8 +2162,41 @@ footer p:nth-child(2) {
 
 
 
+/* ! SUBSCRIBE */
 
+.subscribe {
+	position     : fixed;
+	width        : 100%;
+	height       : 100%;
+	background   : var(--main-bg-color);
+	z-index      : 1100;
+	overflow-y   : auto;
+}
 
+.subscribe__inner {
+	display             : -webkit-box;
+	display             : -webkit-flex;
+	display             : -ms-flexbox;
+	display             : flex;
+	width               : 100%;
+	height              : 100%;
+	/* align-items      : center; */
+	-webkit-box-pack     : center;
+	-webkit-justify-content     : center;
+	    -ms-flex-pack     : center;
+	        justify-content     : center;
+}
+
+.subscribe__contacts {
+	margin   : auto 3rem auto 5%;
+	/* mr */
+}
+
+.subscribe__frame {
+	/* flex-grow   : 1; */
+	width    : 80rem;
+	height   : 100%;
+}
 
 
 
