--- a/render/assets/mains/main.css
+++ b/render/assets/mains/main.css
@@ -57,8 +57,48 @@ img {
 	pointer-events   : none;
 }
 
+/* ! ССЫЛКИ */
+
 a {
 	color   : var(--logo-color);
+}
+
+a.underline {
+	position      : relative;
+	display       : inline-block;
+	padding       : .1rem 1rem .3rem;
+	font-weight   : 500;
+	text-indent   : 0;
+	-webkit-transition    : all .1s ease;
+	-o-transition    : all .1s ease;
+	transition    : all .1s ease;
+}
+
+a.underline:hover {
+	color   : white;
+}
+
+a.underline::after {
+	content            : '';
+	position           : absolute;
+	background-color   : var(--logo-color);
+	-webkit-border-radius      : .9rem;
+	        border-radius      : .9rem;
+	top                : 90%;
+	right              : 1rem;
+	left               : 1rem;
+	height             : 2px;
+	-webkit-transition         : all .1s ease;
+	-o-transition         : all .1s ease;
+	transition         : all .1s ease;
+}
+
+a.underline:hover::after {
+	top       : 0;
+	left      : 0;
+	right     : 0;
+	height    : 100%;
+	z-index   : -1;
 }
 
 /* ! BUTTON 1 */
@@ -78,7 +118,7 @@ a {
 	align-items             : center;
 	overflow                : hidden;
 	background-color        : var(--button_bg_color);
-	padding                 : .8rem 2.5rem;
+	padding                 : .27em 1.38em;
 	-webkit-border-radius   : var(--button_rad);
 	border-radius           : var(--button_rad);
 	min-width               : -webkit-max-content;
@@ -154,6 +194,7 @@ a {
 	align-items             : center;
 	background-color        : var(--logo-color);
 	padding                 : .8rem 2.5rem;
+	font-size               : inherit;
 	-webkit-border-radius   : 2rem;
 	border-radius           : 2rem;
 	min-width               : -webkit-max-content;
@@ -282,7 +323,7 @@ section {
 
 
 
-/* MOBILE NAV */
+/* ! MOBILE NAV */
 
 .mobile_modal_nav {
 	--section-size                      : .7vmin;
@@ -332,6 +373,7 @@ section {
 	margin                : 0 0 calc(var(--section-size) * 2) 0;
 	margin-top            : auto;
 	width                 : 9em;
+	height                : auto;
 }
 
 .mobile_modal_nav__inner>a {
@@ -644,7 +686,8 @@ section {
 }
 
 .main__right {
-	width   : 35%;
+	width    : 35%;
+	height   : auto;
 }
 
 .main__line {
@@ -763,11 +806,12 @@ section {
 }
 
 .whoweare__img {
-	-ms-flex-positive   : 1;
-	-webkit-box-flex    : 1;
 	-webkit-flex-grow   : 1;
+	-webkit-box-flex    : 1;
+	-ms-flex-positive   : 1;
 	flex-grow           : 1;
 	width               : 35%;
+	height              : auto;
 }
 
 .whoweare__text {
@@ -1692,6 +1736,24 @@ section {
 	font-size             : 2.4rem;
 }
 
+.contacts__subscribe_text {
+	text-align   : center;
+	width        : 100%;
+}
+
+.contacts__subscribe_button span {
+	font-size   : 2.4rem;
+	width: 100%;
+	padding: 1.4rem;
+	text-align: center;
+	font-weight: 500;
+}
+
+.contacts__subscribe_button:hover {
+	-webkit-transform: scale(1.03);
+	    -ms-transform: scale(1.03);
+	        transform: scale(1.03);
+}
 
 
 
@@ -2101,6 +2163,20 @@ footer p:nth-child(2) {
 
 
 
+
+/* ! SUBSCRIBE */
+
+.subscribe>div {
+	position     : fixed;
+	width        : 100%;
+	height       : 100%;
+	background   : var(--main-bg-color);
+	z-index      : 1100;
+	display      : -webkit-box;
+	display      : -webkit-flex;
+	display      : -ms-flexbox;
+	display      : flex;
+}
 
 
 
