--- a/assets/mains/main.css
+++ b/assets/mains/main.css
@@ -983,7 +983,9 @@ section {
 }
 
 .courses__card__buttons>* {
+	padding     : 1.1rem 2.5rem;
 	font-size   : calc(var(--section_size) * 2);
+
 }
 
 /* ! COURSES COLORS */
@@ -1746,6 +1748,7 @@ footer p:nth-child(2) {
 }
 
 .course_modal__button .button2 {
+	padding         : 1.2rem 2.5rem;
 	border-radius   : calc(var(--section-size) * 1.8);
 	font-size       : 2.4em;
 }
